# zonerama-api

./: LICENSE  README.md  pyproject.toml
src/: download_album.py  exceptions.py  main.py  parse_arguments.py
tests/: test.py
zonerama_api/: album.py  api.py  download.py  download_album.py  exceptions.py  folder.py  gallery.py  main.py  parse_arguments.py  photo.py  typing.py  zonerama_api.py
zonerama_api/android/: android_api.py  android_exceptions.py  android_typing.py  api_types.py
zonerama_api/classes/: zonerama_album.py  zonerama_folder.py  zonerama_gallery.py  zonerama_photo.py  zonerama_user.py
zonerama_downloader/: download_album.py  exceptions.py  main.py  parse_arguments.py  zonerama_album.py  zonerama_api.py  zonerama_folder.py  zonerama_gallery.py
zonerama_downloader/classes/: zonerama_album.py  zonerama_folder.py  zonerama_gallery.py
