[tool.poetry]
name = "zonerama-downloader"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
zonerama_downloader = 'zonerama_downloader.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
