[tool.poetry]
name = "zonerama-api"
version = "0.2.0"
description = ""
authors = ["Jan Mach <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
argparse = "^1.4.0"
beautifulsoup4 = "4.12.0"
lxml = "^5.2.2"
zeep = "^4.2.1"

[tool.poetry.scripts]
zonerama_downloader = 'zonerama_api.main:main'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
